2008-10-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Handle UTF16/32 encoded files without a BOM better and allow
   them to opened (#2155573, patch by Jason Oster, thanks).


2008-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c, src/plugins.c:
   Fix deprecated usage of g_win32_get_package_installation_directory(),
   pass NULL as package name.
 * src/main.c, src/plugins.c, src/plugindata.h:
   Add main_locale_init() to the plugin API.
 * src/callbacks.c:
   Fix updating of the value of the toolbar Goto line spinbutton.
 * doc/geany.html, doc/geany.txt, src/callbacks.c, src/editor.c,
   src/editor.h, src/highlighting.c, src/plugindata.h, src/plugins.c,
   src/sciwrappers.c, src/search.c:
   Add *_full variants of editor indicator functions to the plugin API
   for more control over indicators.
   Add/Update some API docs.
   Make the 'Mark' button for Find highlight the results with rounded
   boxes instead of marking the whole line.


2008-10-24  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS: Added Roland Baudin to list of contributors of translations.
 * data/html_entities.tags:
   Added some more HTML entities.


2008-10-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c:
   Add simple auto-detection for HTML files without proper extension.
 * geany.glade, src/callbacks.c, src/dialogs.c, src/dialogs.h,
   src/editor.c, src/editor.h, src/interface.c:
   Replace Goto line text entry field in the toolbar with a spin button.
   Remove dialogs_show_goto_line(), use the more generic
   dialogs_show_input_numeric() instead.
   Increase limit of the maximum line number from 99999 to 100000000.
 * doc/geany.html, doc/geany.txt, geany.glade, src/callbacks.c,
   src/interface.c, src/keyfile.c, src/plugindata.h, src/prefs.c,
   src/ui_utils.c, src/ui_utils.h:
   Add toolbar buttons for Cut, Copy, Paste and Delete (#2161750).

