@@ -934,9 +934,9 @@ it for this click and vice versa.</p>
 <div class="section" id="column-mode-editing">
 <h3><a class="toc-backref" href="#id38">Column mode editing</a></h3>
 <p>There is basic support for column mode editing. To use it, create a
-rectangular selection by holding down the Control key while selecting
-some text. It is also possible to create a zero-column selection but
-be careful because there is no visual indication of this selection.
+rectangular selection by holding down the Control and Shift key while
+selecting some text. It is also possible to create a zero-column selection
+but be careful because there is no visual indication of this selection.
 Once a rectangular selection exists you can start editing the text within
 this selection and the modifications will be done for every line in the
 selection.</p>
@@ -4402,7 +4402,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2008-10-25 18:46 UTC.
+Generated on: 2008-10-27 17:07 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
